--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ clap = { version = "4.0", features = ["derive"] }
 eyre = "0.6.8"
 rustyline = "11.0.0"
 inquire = "0.6.2"
+tokio = { version = "1.32.0", features = ["full"] }
