--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ eyre = "0.6.8"
 rustyline = "11.0.0"
 inquire = "0.6.2"
 tokio = { version = "1.32.0", features = ["full"] }
+serde_json = "1.0"
+serde = "1.0"
