--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ inquire = "0.6.2"
 tokio = { version = "1.32.0", features = ["full"] }
 serde_json = "1.0"
 serde = "1.0"
+reqwest = { version = "0.11", features = ["json"] }
