--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tokio = { version = "1.32.0", features = ["full"] }
 serde_json = "1.0"
 serde = "1.0"
 reqwest = { version = "0.11", features = ["json"] }
+async-trait = "0.1.74"
